; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_tox.c_set_friend_error.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_tox.c_set_friend_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TOX_ERR_FRIEND_ADD_TOO_LONG = common dso_local global i32 0, align 4
@TOX_ERR_FRIEND_ADD_NO_MESSAGE = common dso_local global i32 0, align 4
@TOX_ERR_FRIEND_ADD_OWN_KEY = common dso_local global i32 0, align 4
@TOX_ERR_FRIEND_ADD_ALREADY_SENT = common dso_local global i32 0, align 4
@TOX_ERR_FRIEND_ADD_BAD_CHECKSUM = common dso_local global i32 0, align 4
@TOX_ERR_FRIEND_ADD_SET_NEW_NOSPAM = common dso_local global i32 0, align 4
@TOX_ERR_FRIEND_ADD_MALLOC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @set_friend_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_friend_error(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %34 [
    i32 128, label %6
    i32 131, label %10
    i32 130, label %14
    i32 134, label %18
    i32 133, label %22
    i32 129, label %26
    i32 132, label %30
  ]

6:                                                ; preds = %2
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* @TOX_ERR_FRIEND_ADD_TOO_LONG, align 4
  %9 = call i32 @SET_ERROR_PARAMETER(i32* %7, i32 %8)
  br label %34

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @TOX_ERR_FRIEND_ADD_NO_MESSAGE, align 4
  %13 = call i32 @SET_ERROR_PARAMETER(i32* %11, i32 %12)
  br label %34

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @TOX_ERR_FRIEND_ADD_OWN_KEY, align 4
  %17 = call i32 @SET_ERROR_PARAMETER(i32* %15, i32 %16)
  br label %34

18:                                               ; preds = %2
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* @TOX_ERR_FRIEND_ADD_ALREADY_SENT, align 4
  %21 = call i32 @SET_ERROR_PARAMETER(i32* %19, i32 %20)
  br label %34

22:                                               ; preds = %2
  %23 = load i32*, i32** %4, align 8
  %24 = load i32, i32* @TOX_ERR_FRIEND_ADD_BAD_CHECKSUM, align 4
  %25 = call i32 @SET_ERROR_PARAMETER(i32* %23, i32 %24)
  br label %34

26:                                               ; preds = %2
  %27 = load i32*, i32** %4, align 8
  %28 = load i32, i32* @TOX_ERR_FRIEND_ADD_SET_NEW_NOSPAM, align 4
  %29 = call i32 @SET_ERROR_PARAMETER(i32* %27, i32 %28)
  br label %34

30:                                               ; preds = %2
  %31 = load i32*, i32** %4, align 8
  %32 = load i32, i32* @TOX_ERR_FRIEND_ADD_MALLOC, align 4
  %33 = call i32 @SET_ERROR_PARAMETER(i32* %31, i32 %32)
  br label %34

34:                                               ; preds = %2, %30, %26, %22, %18, %14, %10, %6
  ret void
}

declare dso_local i32 @SET_ERROR_PARAMETER(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
